--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass ./sass/style.scss:./css/style.css",
+    "sass": "sass --watch ./sass/style.scss:./css/style.css, --watch ./restaurant/sass/style.scss:./restaurant/css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
   },
   "repository": {
